# hyperforge

./: .claude-projects.yml  .gitignore  AUTH_IMPLEMENTATION.md  Cargo.toml  MIGRATION.md  README.md  container-session.sh
docs/: CONTAINER-SESSION.md  architecture-context-passing.md  architecture-workspace-hierarchy.md  declarative-iac-status.md  ssh-config-migration.md  testing-declarative-iac.md  testing-status.md  workspace-sync-guide.md
docs/architecture/: 16673647334128090623_dry-workspace-delegation.md  16676594318971935743_owner-type-enum.md  16678881688472591615_hyperforge-frontend.md  16678888752146612735_hyperforge-declarative-iac.md
docs/plans/: DESIGN-CLARIFICATIONS.md  LFORGE2-0.md  LFORGE2-1.md  LFORGE2-20.md  LFORGE2-AUTH.md  LFORGE2-PACKAGES.md
docs/plans/LFORGE-v1/: LFORGE-1.md  LFORGE-2.md  LFORGE-3.md  LFORGE-4.md  LFORGE-5.md  LFORGE-6.md  LFORGE-7.md  LFORGE-8.md  LFORGE-9.md
docs/rename-cleanup/: discovery.md
docs/v5/: README.md  architecture.md  data-model.md  development.md  getting-started.md  methods.md  v4-vs-v5.md
plans/AUTH/: AUTH-1.md  AUTH-2.md  AUTH-3.md  AUTH-4.md  AUTH-5.md  AUTH-6.md
plans/CLEANUP/: CLEANUP-1.md  CLEANUP-2.md  CLEANUP-3.md  CLEANUP-4.md  CLEANUP-5.md  CLEANUP-6.md  CLEANUP-7.md  CLEANUP-8.md
plans/CONF/: CONF-1.md  CONF-2.md  CONF-3.md  CONF-4.md  CONF-5.md  CONF-6.md  CONF-7.md
plans/ORGS/: ORGS-1.md  ORGS-2.md  ORGS-3.md  ORGS-4.md  ORGS-5.md
plans/ORGS/artifacts/: CHECKPOINT.md  EVAL-20260419-round2.md  EVAL-20260419.md  EVAL-20260420-round3.md
plans/TRANSPORT/: TRANSPORT-1.md  TRANSPORT-2.md  TRANSPORT-3.md
plans/TRANSPORT/artifacts/: CHECKPOINT.md
plans/WORK/: WORK-1.md  WORK-2.md  WORK-3.md  WORK-4.md  WORK-5.md  WORK-6.md  WORK-7.md
plans/v5/: CONTRACTS.md  README.md
plans/v5/V5CORE/: V5CORE-1.md  V5CORE-10.md  V5CORE-2.md  V5CORE-3.md  V5CORE-4.md  V5CORE-5.md  V5CORE-6.md  V5CORE-7.md  V5CORE-8.md  V5CORE-9.md
plans/v5/V5LIFECYCLE/: V5LIFECYCLE-1.md  V5LIFECYCLE-10.md  V5LIFECYCLE-11.md  V5LIFECYCLE-2.md  V5LIFECYCLE-3.md  V5LIFECYCLE-4.md  V5LIFECYCLE-5.md  V5LIFECYCLE-6.md  V5LIFECYCLE-7.md  V5LIFECYCLE-8.md  V5LIFECYCLE-9.md
plans/v5/V5ORGS/: V5ORGS-1.md  V5ORGS-2.md  V5ORGS-3.md  V5ORGS-4.md  V5ORGS-5.md  V5ORGS-6.md  V5ORGS-7.md  V5ORGS-8.md  V5ORGS-9.md
plans/v5/V5PARITY/: V5PARITY-1.md  V5PARITY-10.md  V5PARITY-11.md  V5PARITY-12.md  V5PARITY-13.md  V5PARITY-14.md  V5PARITY-15.md  V5PARITY-16.md  V5PARITY-17.md  V5PARITY-18.md  V5PARITY-19.md  V5PARITY-2.md  V5PARITY-20.md  V5PARITY-21.md  V5PARITY-22.md  V5PARITY-23.md  V5PARITY-24.md  V5PARITY-25.md  V5PARITY-26.md  V5PARITY-27.md  V5PARITY-28.md  V5PARITY-29.md  V5PARITY-3.md  V5PARITY-30.md  V5PARITY-31.md  V5PARITY-32.md  V5PARITY-33.md  V5PARITY-34.md  V5PARITY-35.md  V5PARITY-36.md  V5PARITY-4.md  V5PARITY-5.md  V5PARITY-6.md  V5PARITY-7.md  V5PARITY-8.md  V5PARITY-9.md
plans/v5/V5PROV/: V5PROV-1.md  V5PROV-2.md  V5PROV-3.md  V5PROV-4.md  V5PROV-5.md  V5PROV-6.md  V5PROV-7.md  V5PROV-8.md  V5PROV-9.md
plans/v5/V5REPOS/: V5REPOS-1.md  V5REPOS-10.md  V5REPOS-11.md  V5REPOS-12.md  V5REPOS-13.md  V5REPOS-14.md  V5REPOS-15.md  V5REPOS-2.md  V5REPOS-3.md  V5REPOS-4.md  V5REPOS-5.md  V5REPOS-6.md  V5REPOS-7.md  V5REPOS-8.md  V5REPOS-9.md
plans/v5/V5WS/: V5WS-1.md  V5WS-10.md  V5WS-2.md  V5WS-3.md  V5WS-4.md  V5WS-5.md  V5WS-6.md  V5WS-7.md  V5WS-8.md  V5WS-9.md
scripts/: bootstrap.sh
src/: docker.rs  error.rs  events.rs  hub.rs  lib.rs  registry.rs  templates.rs
src/activations/: mod.rs
src/activations/forge/: activation.rs  codeberg.rs  events.rs  github.rs  mod.rs
src/activations/org/: activation.rs  child_router.rs  events.rs  mod.rs
src/activations/repos/: activation.rs  activation.rs.bak  activation.rs.bak2  activation.rs.bak3  activation.rs.bak4  activation.rs.bak5  activation.rs.bak6  events.rs  mod.rs  repo_router.rs
src/activations/secrets/: activation.rs  events.rs  mod.rs
src/activations/workspace/: activation.rs  events.rs  mod.rs
src/adapters/: codeberg.rs  forge_port.rs  github.rs  gitlab.rs  local_forge.rs  mod.rs
src/adapters/registry/: codeberg.rs  github.rs  mod.rs
src/adapters/releases/: codeberg.rs  github.rs  mod.rs
src/auth/: credentials.rs  keychain.rs  mod.rs  yaml_provider.rs
src/auth_hub/: mod.rs  storage.rs  types.rs
src/bridge/: codeberg.rs  forge_client.rs  git_remote.rs  github.rs  keychain.rs  mock_forge_client.rs  mod.rs  package_registry.rs  pulumi.rs  secret_store.rs  ssh_config.rs  validated_client.rs
src/build_system/: cabal.rs  cabal_project.rs  cargo.rs  cargo_config.rs  cross_compile.rs  dep_graph.rs  mod.rs  node.rs  publish.rs  validate.rs  version.rs
src/commands/: hooks.rs  init.rs  materialize.rs  mod.rs  push.rs  runner.rs  status.rs  workspace.rs
src/config/: mod.rs  org.rs
src/git/: mod.rs
src/hubs/: config.rs  images.rs  mod.rs  package.rs  releases.rs  repo.rs  utils.rs  workspace.rs
src/package/: crates_io.rs  hackage.rs  mod.rs
src/remote/: mod.rs
src/services/: mod.rs  symmetric_sync.rs
src/storage/: config.rs  mod.rs  org_storage.rs  paths.rs  token_storage.rs
src/types/: config.rs  forge.rs  mod.rs  org.rs  package.rs  registry.rs  repo.rs  secret.rs  workspace.rs
src/v5/: build_hub.rs  config.rs  hub.rs  mod.rs  orgs.rs  repos.rs  secrets.rs  secrets_hub.rs  workspaces.rs
src/v5/adapters/: codeberg.rs  github.rs  gitlab.rs  mod.rs
src/v5/ops/: analytics.rs  fs.rs  git.rs  mod.rs  repo.rs  state.rs
tests/: build_hub_test.rs  e2e_transport.rs  e2e_user_stories.rs  integration_test.rs  smoke_test.rs  v5_integration.rs  workspace_integration.rs
tests/fixtures/: config.yaml  repos.yaml  tokens.yaml
tests/v5/V5CORE/: V5CORE-10.sh  V5CORE-2.sh  V5CORE-3.sh  V5CORE-4.sh  V5CORE-5.sh  V5CORE-6.sh  V5CORE-7.sh  V5CORE-8.sh  V5CORE-9.sh
tests/v5/V5LIFECYCLE/: V5LIFECYCLE-10.sh  V5LIFECYCLE-11.sh  V5LIFECYCLE-2.sh  V5LIFECYCLE-3.sh  V5LIFECYCLE-4.sh  V5LIFECYCLE-5.sh  V5LIFECYCLE-6.sh  V5LIFECYCLE-7.sh  V5LIFECYCLE-8.sh  V5LIFECYCLE-9.sh
tests/v5/V5ORGS/: V5ORGS-2.sh  V5ORGS-3.sh  V5ORGS-4.sh  V5ORGS-5.sh  V5ORGS-6.sh  (+3 more)
(+288 files in other folders)
