[package]
name = "hyperforge"
version = "4.1.0"
edition = "2021"
description = "Multi-forge repository management"
license = "MIT"

[lib]
name = "hyperforge"
path = "src/lib.rs"

[[bin]]
name = "hyperforge"
path = "src/bin/hyperforge.rs"

[[bin]]
name = "hyperforge-auth"
path = "src/bin/hyperforge-auth.rs"

[[bin]]
name = "hyperforge-ssh"
path = "src/bin/hyperforge-ssh.rs"

[dependencies]
# Hub framework integration
plexus-core = "0.4"
plexus-macros = "0.4"
plexus-transport = "0.2"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"  # Preserve formatting when editing

# Schema generation
schemars = { version = "1.1", features = ["derive"] }

# Core types
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Git operations
regex = "1"

# JSON-RPC (required by hub-macro)
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls-vendored"] }

# Container/OCI
bollard = "0.18"
oci-client = { version = "0.14", default-features = false, features = ["native-tls"] }

# Crypto
sha2 = "0.10"

# Utilities
dirs = "5"
urlencoding = "2"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
