[package]
name = "hyperforge"
version = "4.1.3"
edition = "2021"
description = "Multi-forge repository management"
license = "MIT"

[lib]
name = "hyperforge"
path = "src/lib.rs"

[[bin]]
name = "hyperforge"
path = "src/bin/hyperforge.rs"

[[bin]]
name = "hyperforge-auth"
path = "src/bin/hyperforge-auth.rs"

[[bin]]
name = "hyperforge-ssh"
path = "src/bin/hyperforge-ssh.rs"

[dependencies]
# Hub framework integration
plexus-core = "0.5"
plexus-macros = "0.5"
plexus-transport = "0.2"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"  # Preserve formatting when editing

# Schema generation
schemars = { version = "1.1", features = ["derive"] }

# Core types
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Git operations
regex = "1"

# JSON-RPC (required by hub-macro)
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls-vendored"] }

# Container/OCI
bollard = "0.18"
oci-client = { version = "0.14", default-features = false, features = ["native-tls"] }

# Crypto
sha2 = "0.10"

# Utilities
dirs = "5"
urlencoding = "2"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"

# --- Lint posture ---
#
# Established by HF-CLEAN (hyperforge 4.1.2). Goal: fail the build on any new
# warning. Every `"allow"` entry must carry a one-line justification.

[lints.rust]
warnings = "deny"
# Forbid all unsafe code. If a legitimate unsafe block shows up, downgrade this
# to "deny" in-place and add a narrowly-scoped `#[allow(unsafe_code)]` at the
# use-site with a comment. Do not remove the forbid.
unsafe_code = "forbid"
# `unused_crate_dependencies` produces structural false positives in multi-
# target crates (hyperforge ships a lib + 3 bins, and clap/tracing-subscriber/
# plexus-transport are bin-only). Keeping as "allow" rather than per-bin
# `#[allow]` churn. Revisit if Cargo gains target-specific dependency support.
unused_crate_dependencies = "allow"
# `let_underscore_drop` fires on ~44 fire-and-forget I/O sites
# (`let _ = std::fs::write(...)`, `let _ = Command::new(...).output().await`,
# `let _ = forge.load_from_yaml().await`) where the code deliberately ignores
# the Result. Each site is idiomatic and rewriting to `drop(...)` or `.ok()`
# harms readability without catching real bugs. Kept off.
let_underscore_drop = "allow"
unreachable_pub = "warn"
# `missing_debug_implementations` fires on 31 internal adapter/hub types that
# wrap non-Debug foreign values (`reqwest::Client`, `Arc<dyn AuthProvider>`,
# `bollard::Docker`, etc.). Deriving cleanly would require adding `Debug` as
# a supertrait to `AuthProvider` and manual impls for the rest. Scope
# exceeds HF-CLEAN; tracked by HF-DEBUG (see plans/HF/HF-DEBUG.md, Pending).
missing_debug_implementations = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Opt-outs: each is noise-to-signal too low to enforce workspace-wide.
module_name_repetitions = "allow"   # common in domain modules; renaming adds churn without clarity
missing_errors_doc = "allow"        # opt-in documentation, not correctness
missing_panics_doc = "allow"        # same
must_use_candidate = "allow"        # signal-to-noise too low
too_many_lines = "allow"            # subjective; not enforcing
# `unused_async` fires on methods kept async to preserve the hub-method
# signature shape (all generated by `#[plexus_macros::method]` and must return
# a Future for dispatch). Churning the signature belongs to plexus-macros, not
# hyperforge.
unused_async = "allow"
# Hub methods pass params 1:1 with Plexus RPC arguments. Argument-count cleanup
# belongs to HF-IR (dynamic children reshape), not HF-CLEAN.
too_many_arguments = "allow"
# `struct_excessive_bools` fires on `HyperforgeEvent` variants (draft + prerelease,
# etc.) and `Visibility` pairs. Restructuring those is an API change, not a
# warning fix.
struct_excessive_bools = "allow"
# `match_same_arms` + `ignored_unit_patterns` flag matches like `Ok(()) => {}`
# which is the idiomatic Rust pattern for Result<()>. Not a bug.
match_same_arms = "allow"
ignored_unit_patterns = "allow"
# `significant_drop_tightening`, `assigning_clones`, `option_if_let_else`,
# `or_fun_call`, `redundant_pub_crate`, `use_self`, `needless_pass_by_value`,
# `ref_option`, `case_sensitive_file_extension_comparisons`, `similar_names`,
# `cast_possible_truncation`, `cast_precision_loss` — all nursery/pedantic
# lints that fire on code where the current form is either idiomatic or the
# cited risk is a non-issue. Each would take a sweep to address and
# benchmark that is out of scope for HF-CLEAN. Tracked by HF-LINT-SWEEP
# (see plans/HF/HF-LINT-SWEEP.md, Pending).
significant_drop_tightening = "allow"
assigning_clones = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
redundant_pub_crate = "allow"
use_self = "allow"
needless_pass_by_value = "allow"
ref_option = "allow"
case_sensitive_file_extension_comparisons = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
# `format_push_string` suggests `write!(s, ...)?` replacements that add import
# and error-handling noise for trivial `String::push_str(&format!(...))`. Not
# worth the churn.
format_push_string = "allow"
# `return_self_not_must_use` flags every method that returns `Self`, including
# fluent builder/constructor helpers (`pub fn new(...) -> Self`). Adding
# `#[must_use]` to each is noise; the calling idiom at use sites already
# captures the value.
return_self_not_must_use = "allow"
# `manual_let_else` (29) is stylistic pedantic. Many of the sites are in
# hub methods that use an early-return `yield Error; return;` pattern that
# `let ... else` handles poorly. Allow rather than churn.
manual_let_else = "allow"
